@@ -21,6 +21,13 @@ _ignore_dir_list = [
     "InstallArea",
     ]
 
+def _get_cmtpath():
+    for p in os.environ['CMTPATH'].split(os.pathsep):
+        if os.access(p, os.W_OK):
+            return p
+    raise OSError('no write-able directory among $CMTPATH entries (%s)' %
+                  os.environ['CMTPATH'])
+
 def _is_in_ignore_dir_list(pathname):
     return any(map(pathname.count, _ignore_dir_list))
 
@@ -268,7 +275,7 @@ def createWorkArea(workAreas = None, installDir = None,
         pass
     atlasRunTime = _translate_runtimepkg_name(runTimePkg)
     
-    defaultWorkArea = os.environ[CmtStrings.CMTPATH].split(os.pathsep)[0]
+    defaultWorkArea = _get_cmtpath()
     if len(workAreas) <= 0:
         workAreas = [ defaultWorkArea ]
     if installDir == None:
